fix the width of the buttons so they don't jump around when there are fewer of them

--- a/src/ui/ProgramEditor.css
+++ b/src/ui/ProgramEditor.css
@@ -3,6 +3,9 @@
     position: fixed;
     top: 146px;
   }
+  .TrackPage .ProgramEditor .buttons {
+    width: 355px;
+  }
 }
 .ProgramEditor .buttons {
   padding-bottom: 5px;
